# blindspot-env

./: .dockerignore  .gitignore  Blog.md  Dockerfile  HOME_ARRIVAL.md  README.html  README.md  __init__.py  client.py  further-results.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
baselines/: __init__.py  dense_retrieval_baseline.py  random_baseline.py  trending_baseline.py
data/: baseline_calibration.json  comprehension_scores.json  concept_catalog.json  concept_pool_per_user.json  ground_truth_adoption.json  knn_users.json  novelty_flags.json  reading_paths.json  user_splits.json  user_summaries.json
docs/: submission_walkthrough.md
notebooks/: 01_demo.ipynb  02_training.ipynb  02_training_GRPO.ipynb  03_demo.ipynb  04_grpo_failure.ipynb
plots/: eval_results.json  summary.json  summary_heldout_with_trained.json  summary_with_trained.json
reports/: PHASE_C_SUMMARY.md  phase_C_metrics.json
scripts/: __init__.py  baseline_eval.py  blindspot_demo.py  build_demo_notebook.py  build_synthetic_seed.py  build_training_notebook.py  deploy_to_space.py  generate_sft_traces.py  make_plots.py  precompute_01_fetch_users.py  precompute_02_fetch_corpus.py  precompute_03_extract_concepts.py  precompute_04_build_pools.py  precompute_05_score_adoption.py  precompute_06_build_paths.py  precompute_06_build_paths_s2.py.bak  precompute_07_score_comprehension.py  precompute_08_finalize.py  precompute_demo_cache.py  push_to_hub.py  reward_ablation.py  run_all_precompute.sh
server/: __init__.py  app.py  blindspot_environment.py  data_loader.py  (+2 more)
(+11 files in other folders)
